# generals-bots

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEV_NOTES.md  LICENSE  Makefile  README.md  TODO  TODO.md  bench.py  ideas.txt  notes  pyproject.toml  requirements.txt  rllib.py  scratch.py  setup.py  test  wrappers.py
.github/: release-please-config.json
Data_Processing/: Data_Cleaning.py  Replay_Capture.js  Total_Data_Capture.js
competition/: matchup.py  protocol.py
examples/: analyze_play.py  client_example.py  complete_example.py  dummy.py  example.py  gym_example.py  gymnasium_example.py  hunter_vs_expander.py  jax_example.py  jax_ppo.py  jax_ppo_2.py  jax_ppo_3.py  jax_ppo_clean.py  jax_ppo_jumanji.py  jax_rendering_example.py  jax_rewards_example.py  jax_vectorized_env.py  minimal.py  pettingzoo_example.py  ray_example.py  record_replay_example.py  replay.py  replay_example.py  reward_functions.py  run_environment.py  show_replay_example.py  simple_example.py  stdio_runner.py  vectorized_example.py  vectorized_multiagent_gymnasium.py  visualization_example.py  visualize_policy.py
generals/: __init__.py  agents.py  channels.py  config.py  constants.py  env.py  game.py  game_config.py  grid.py  grid_config.py  map.py  maps.py  observation.py  protocol.py  rendering.py  replay.py  utils.py
tests/: gym_check.py  gym_longruntest.py  gym_test.py  numpy_vs_jax_correctness.py  parallel_api_check.py  parallel_api_test.py  sb3_check.py  scratch.py  simple_correctness_test.py  test_action_jax.py  test_build_castles.py  test_control.py  test_deathtouch.py  test_equivalence.py  test_game.py  test_game_jax.py  test_game_jax_performance.py  test_grid.py  test_grid_generation_performance.py  test_gym.py  test_human.py  test_logic.py  test_map.py  test_run.py  (+5 more)
(+110 files in other folders)
